apps/scrapyd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scrapyd
  labels:
    app.kubernetes.io/component: monitoring
