apps/scrapyd/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 6800
      targetPort: 6800
  selector:
    app.kubernetes.io/name: api
