apps/scrapyd/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP
  ports:
    - name: webserver
      port: 5000
      targetPort: 5000
  selector:
    app.kubernetes.io/name: webserver
