apps/scrapyd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    gethomepage.dev/description: Web crawling
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: mdi-spider
    gethomepage.dev/name: Scrapyd
    gethomepage.dev/app: webserver
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: "scrapydweb.homelab"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 5000
    - host: "scrapyd.homelab"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 6800
